# fast_screen_capture_win

./: .metadata  LICENSE  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
lib/: fast_screen_capture_win.dart  fast_screen_capture_win_bindings_generated.dart
src/: CMakeLists.txt  fast_screen_capture_win.c
windows/: CMakeLists.txt
